# RobustOptimizationSLAM

./: CMakeLists.txt  README.md  README_Personal.md  build_command.txt
bash/: evalutor.sh  g2o_evaluator.sh  g2o_exp_incr_extreme.sh  g2o_exp_incremental_2D.sh  g2o_exp_incremental_3D.sh  g2o_experiment.sh  g2o_experiment_2D.sh  g2o_experiment_3D.sh  gtsam_evaluator.sh  gtsam_experiment.sh  gtsam_experiment_2D.sh  gtsam_experiment_3D.sh  new_metric_eval.sh
cmake/: FindG2O.cmake  FindGTSAM.cmake  FindMKL.cmake
evaluator/: CMakeLists.txt
evaluator/include/: metric_eval.hpp
evaluator/src/: evaluator.cpp  metric_eval.cpp  test_new_metrics.cpp
robust_g2o/: CMakeLists.txt
robust_g2o/cfg/: params.yaml  params_2D.yaml  params_3D.yaml
robust_g2o/include/: dcs_kernel_impl.hpp  edge_se2_mixture.hpp  utils.hpp
robust_g2o/src/: artificial_seeder.cpp  covariance_estimation.cpp  dataset_enhancer.cpp  dcs_2D.cpp  dcs_3D.cpp  dcs_kernel_impl.cpp  edge_se2_mixture.cpp  edge_se3_mixture.cpp  gnc_2D.cpp  gnc_3D.cpp  huber_2D.cpp  huber_3D.cpp  maxmix.cpp  maxmix_2D.cpp  maxmix_3D.cpp  noise_applier_2D.cpp  rrr_2D.cpp  rrr_3D.cpp  sc_2D.cpp  sc_3D.cpp  utils.cpp
robust_g2o/src/incr/: CMakeLists.txt  dcs_2D.cpp  dcs_3D.cpp  gnc_2D.cpp  gnc_3D.cpp  huber_2D.cpp  huber_3D.cpp  maxmix_2D.cpp  maxmix_3D.cpp  rrr_2D.cpp  rrr_3D.cpp  sc_2D.cpp  sc_3D.cpp
robust_g2o/src/off/: CMakeLists.txt  dcs_3D.cpp  gnc_2D.cpp  gnc_3D.cpp  huber_3D.cpp  maxmix_2D.cpp  maxmix_3D.cpp  rrr_2D.cpp  sc_2D.cpp  sc_3D.cpp
robust_gtsam/: CMakeLists.txt
robust_gtsam/cfg/: params.yaml
robust_gtsam/include/: utils.hpp
robust_gtsam/src/: dcs.cpp  dcs_2D.cpp  dcs_3D.cpp  gnc.cpp  gnc_2D.cpp  gnc_3D.cpp  huber.cpp  huber_2D.cpp  huber_3D.cpp  rpgo.cpp  rpgo_2D.cpp  rpgo_3D.cpp  utils.cpp
scripts/: generateDataset.py  mainGenerator.py
